# uniffi-rs-constructor-return-type

./: Cargo.toml  build.rs
ConvertToSwift/: Package.swift
ConvertToSwift/RustFramework.xcframework/: Info.plist
ConvertToSwift/RustFramework.xcframework/ios-arm64/Headers/: convert_to_swiftFFI.h  module.modulemap
ConvertToSwift/Sources/ConvertToSwift/: convert_to_swift.swift
src/: lib.rs
