[package]
name = "convert_to_swift"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib", "lib"]
name = "convert_to_swift"

[dependencies]
uniffi = "0.27"
thiserror = "1.0"

[build-dependencies]
uniffi = { version = "0.27", features = ["build"] }